--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ h1:hover {
 .selectsection {
   width: 530px;
   height: 400px;
-  padding: 60px;
+  padding: 20px;
 
   display: flex;
   align-items: center;
@@ -550,6 +550,7 @@ h1:hover {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding: 20px;
   
 }
 .container-item-ps .container-text-ps-title {
@@ -688,6 +689,9 @@ h1:hover {
 }
 
 @media screen and (max-width: 900px) {
+  .logo {
+    width: 40px;
+  }
   .menu {
     width: 100%;
     max-height: 0;
@@ -716,18 +720,16 @@ h1:hover {
     width: 80%;
   }
   .footer-contacts {
-    width: 150px;
-    height: 70px;
-    font-size: 20px;
+    width: 100px;
+    height: 50px;
+    font-size: 13px;
+    border: 2px solid;
   }
   .bottom-footer {
     font-size: 15px;
   }
   .navbar{
-    padding-left: 5vw;
-    padding-right: 5vw;
-    padding-top: 2vw;
-    padding-bottom: 2vw;
+    padding: 5vw;
   }
   .cursor{
     display: none;
@@ -752,7 +754,7 @@ h1:hover {
     padding: 0;
   }
   .container-post-scroll .container-item-ps {
-    width: 90%;
+    width: 370px;
   }
   .top-central{
     top: 30px;
