--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   position: fixed;
   transition: all 0.2s ease-in-out;
   z-index: 9;
-  padding: 2%;
+  padding: 20px
 }
 .navbar a {
   text-decoration: none;
@@ -728,7 +728,7 @@ h1:hover {
     font-size: 15px;
   }
   .navbar{
-    padding: 5vw;
+    padding: 10px;
   }
   .cursor{
     display: none;
