--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ body {
   width: 100%;
   height: fit-content;
   display: flex;
-  flex-wrap: wrap;
+  border: 1px solid red;
+  
   align-items: center;
   justify-content: space-between;
 
@@ -701,9 +702,14 @@ h1:hover {
     align-items: center;
   }
   .navbar label {
-    display: inline-flex;
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    right: 20px;
+    display: flex;
     align-items: center;
     cursor: pointer;
+    border: 1px solid yellow;
   }
   #toggler:checked ~ .menu {
     max-height: 100%;
