--- a/style.css
+++ b/style.css
@@ -29,15 +29,14 @@ body {
   width: 100%;
   height: fit-content;
   display: flex;
-  border: 1px solid red;
-  
+
   align-items: center;
   justify-content: space-between;
 
   position: fixed;
   transition: all 0.2s ease-in-out;
   z-index: 9;
-  padding: 20px
+  padding: 25px
 }
 .navbar a {
   text-decoration: none;
@@ -698,8 +697,12 @@ h1:hover {
     overflow: hidden;
   }
   .list {
-    flex-direction: column;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
     align-items: center;
+    justify-content: flex-start;
+    padding-left: 10px;
   }
   .navbar label {
     width: fit-content;
@@ -709,7 +712,6 @@ h1:hover {
     display: flex;
     align-items: center;
     cursor: pointer;
-    border: 1px solid yellow;
   }
   #toggler:checked ~ .menu {
     max-height: 100%;
@@ -734,7 +736,7 @@ h1:hover {
     font-size: 15px;
   }
   .navbar{
-    padding: 10px;
+    padding: 15px;
   }
   .cursor{
     display: none;
