--- a/style.css
+++ b/style.css
@@ -694,8 +694,14 @@ h1:hover {
     width: 40px;
   }
   
-  
-  
+  .list {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 10px;
+  }
   
   .remove-text {
     display: none;
