--- a/style.css
+++ b/style.css
@@ -68,7 +68,6 @@ body {
 }
 .logo {
   width: 60px;
-  display: flex;
 }
 .list {
   list-style: none;
@@ -688,19 +687,23 @@ h1:hover {
   position: absolute;
 }
 
-
 @media screen and (max-width: 900px) {
   .logo {
     width: 40px;
   }
   
-  .list {
-    width: 100%;
+  
+  .navbar label {
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    right: 20px;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
-    padding-left: 10px;
+    cursor: pointer;
+  }
+  #toggler:checked ~ .menu {
+    max-height: 100%;
   }
   
   .remove-text {
