--- a/style.css
+++ b/style.css
@@ -128,8 +128,8 @@ body {
   bottom: 0;
 }
 .arrow {
-  width: 7vmin;
-  height: 7vmin;
+  width: 6vmin;
+  height: 6vmin;
   box-sizing: border-box;
   position: absolute;
   top: 0;
@@ -140,7 +140,7 @@ body {
   content: "";
   width: 100%;
   height: 100%;
-  border-width: 0.3vmin 0.3vmin 0 0;
+  border-width: 0.2vmin 0.2vmin 0 0;
   border-style: solid;
   border-color: white;
   transition: 0.2s ease;
@@ -311,25 +311,25 @@ h1:hover {
 
 /*sistemazione di ogni immagine horizontal-scroll*/
 .el1 {
-  width: 350px;
+  width: 30vh;
 }
 .el2 {
-  width: 500px;
+  width: 40vh;
 }
 .el3 {
-  width: 350px;
+  width: 30vh;
 }
-.el3 {
-  width: 470px;
+.el4{
+  width: 40vh;
 }
-.el4 {
-  width: 300px;
+.el5{
+  width: 45vh;
 }
-.el5 {
-  width: 450px;
+.el6{
+  width: 38vh;
 }
-.el6 {
-  width: 400px;
+.el7{
+  width: 45vh;
 }
 
 /*freccia hs*/
@@ -774,5 +774,22 @@ h1:hover {
   .bottom-footer {
     font-size: 14px;
     flex-direction: column;
+  }
+  .arrow{
+    display: none;
+  }
+  .scroll-down{
+    width: 100%;
+    height: fit-content;
+    position: absolute;
+    bottom: 15vh;
+
+    display: flex;
+    justify-content: center;
+
+    font-size: 18px;
+    font-family: "Montserrat", sans-serif;
+    color: white;
+    opacity: 0.8;
   }
 }
