--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
   overscroll-behavior: none;
 }
 
-
 .navbar {
   width: 100%;
   height: fit-content;
@@ -36,7 +35,7 @@ body {
   position: fixed;
   transition: all 0.2s ease-in-out;
   z-index: 9;
-  padding: 25px
+  padding: 25px;
 }
 .list a {
   text-decoration: none;
@@ -274,7 +273,7 @@ h1:hover {
   margin-bottom: 10px;
 }
 
- .section-img {
+.section-img {
   width: 100%;
   height: fit-content;
   background-color: var(--details);
@@ -308,7 +307,6 @@ h1:hover {
   margin-bottom: 10px;
 }
 
-
 /*sistemazione di ogni immagine horizontal-scroll*/
 .el1 {
   width: 30vh;
@@ -319,16 +317,16 @@ h1:hover {
 .el3 {
   width: 30vh;
 }
-.el4{
+.el4 {
   width: 40vh;
 }
-.el5{
+.el5 {
   width: 45vh;
 }
-.el6{
+.el6 {
   width: 38vh;
 }
-.el7{
+.el7 {
   width: 45vh;
 }
 
@@ -345,6 +343,10 @@ h1:hover {
 .hs-arrow img {
   height: 100%;
   width: 50%;
+}
+
+.scroll-down {
+  display: none;
 }
 
 .container-mobile {
@@ -552,7 +554,6 @@ h1:hover {
   align-items: center;
   flex-direction: column;
   padding: 20px;
-  
 }
 .container-item-ps .container-text-ps-title {
   font-family: "Montserrat", sans-serif;
@@ -574,25 +575,24 @@ h1:hover {
 }
 
 /*onhover obj*/
-.item-container{
+.item-container {
   width: 100%;
   height: 100%;
   position: relative;
-  
 }
-.top-central{
+.top-central {
   width: 15%;
   position: absolute;
   top: 115px;
   right: 0;
 }
 
-.central{
+.central {
   width: 95%;
   position: absolute;
   top: 49%;
 }
-.bottom-central{
+.bottom-central {
   width: 15%;
   position: absolute;
   bottom: 20px;
@@ -637,7 +637,7 @@ h1:hover {
 
 .bottom-footer {
   width: 100%;
-  height: 5vh;
+  height: 7vh;
   background-color: var(--primary);
 
   display: flex;
@@ -711,22 +711,19 @@ h1:hover {
     font-size: 13px;
     border: 2px solid;
   }
-  .bottom-footer {
-    font-size: 15px;
-  }
-  .navbar{
+  .navbar {
     padding: 15px;
   }
-  .cursor{
+  .cursor {
     display: none;
   }
-  .element-text{
+  .element-text {
     font-size: 15px;
   }
-  .container-item-ps .container-text-ps-text{
+  .container-item-ps .container-text-ps-text {
     font-size: 15px;
   }
-  .container-item-ps .container-text-ps-title{
+  .container-item-ps .container-text-ps-title {
     padding: 0;
   }
   .testo {
@@ -742,20 +739,20 @@ h1:hover {
   .container-post-scroll .container-item-ps {
     width: 370px;
   }
-  .top-central{
+  .top-central {
     top: 30px;
     width: 52px;
   }
-  .bottom-central{
+  .bottom-central {
     bottom: 10px;
     width: 52px;
   }
-  .central{
+  .central {
     top: 55px;
     width: 340px;
     right: 0;
   }
-  .item-container{
+  .item-container {
     height: 160px;
   }
   .container-hs-top {
@@ -764,7 +761,7 @@ h1:hover {
   .container-mobile > a {
     display: flex;
   }
-  .borderplus{
+  .borderplus {
     margin-bottom: 20px;
   }
   .background-container {
@@ -774,11 +771,12 @@ h1:hover {
   .bottom-footer {
     font-size: 14px;
     flex-direction: column;
+    justify-content: center;
   }
-  .arrow{
+  .arrow {
     display: none;
   }
-  .scroll-down{
+  .scroll-down {
     width: 100%;
     height: fit-content;
     position: absolute;
