--- a/style.css
+++ b/style.css
@@ -611,6 +611,9 @@ h1:hover {
   right: 0;
 }
 
+.displaynone{
+  display: none;
+}
 
 .footer {
   width: 100%;
@@ -804,8 +807,10 @@ h1:hover {
     opacity: 0.8;
   }
 
-  .mobile-arrow {
+  .displaynone{
     display: flex;
+  }
+  .mobile-arrow {
     position: absolute;
     width: fit-content;
     height: 9vh;
@@ -816,7 +821,6 @@ h1:hover {
     right: 28vw;
   }
   .text-arrow {
-    display: flex;
     position: absolute;
 
     font-size: 18px;
@@ -827,7 +831,6 @@ h1:hover {
     left: 28vw;
   }
   .text-arrow-line {
-    display: flex;
     position: absolute;
 
     font-size: 12px;
@@ -839,7 +842,6 @@ h1:hover {
   }
 
   .mobile-arrow-second {
-    display: flex;
     position: absolute;
     width: fit-content;
     height: 8vh;
@@ -850,7 +852,6 @@ h1:hover {
     left: 34vw;
   }
   .text-arrow-second {
-    display: flex;
     position: absolute;
 
     font-size: 18px;
@@ -861,7 +862,6 @@ h1:hover {
     left: 15vw;
   }
   .text-arrow-line-second{
-    display: flex;
     position: absolute;
 
     font-size: 12px;
