--- a/style.css
+++ b/style.css
@@ -67,10 +67,14 @@ body {
   color: var(--details);
 }
 .logo {
-  width: 60px;
+  width: 20vw;
+}
+.object{
+  width: 50vw;
+  border: 1px solid yellow;
+  height: auto;
 }
 .list {
-  border: 1px solid red;
   list-style: none;
   display: flex;
   gap: 15px;
@@ -110,8 +114,6 @@ body {
   background-color: black;
 }
 .savino-rosella {
-
-  border: 1px solid green;
   display: flex;
   justify-content: flex-start;
   flex-flow: row wrap;
@@ -724,9 +726,7 @@ h1:hover {
 }
 
 @media screen and (max-width: 900px) {
-  .logo {
-    width: 40px;
-  }
+  
   .remove-text {
     display: none;
   }
@@ -799,6 +799,7 @@ h1:hover {
   .background-container {
     background-image: none;
     background-color: #373737;
+    flex-direction: column;
   }
   .bottom-footer {
     font-size: 14px;
